# fast-segmentation

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
configs/: main_cfg.yaml
data/: demo.txt  inference.txt  test.txt  train.txt  train_medium.txt  val.txt
datasets/: filter_images.py
datasets/cityscapes/: filter_images.py
fast_segmentation/: __init__.py
fast_segmentation/core/: evaluate.py  inference.py  train.py  utils.py
fast_segmentation/data/: analyze_tevel_data.py  filter_images.py
fast_segmentation/model_components/: consts.py  data_cv2.py  soft_dice_loss.py  transform_cv2.py
fast_segmentation/model_components/architectures/: bisenetv2.py  consts.py
fast_segmentation/visualization/: visualize.py
src/: __init__.py
src/configs/: __init__.py  bisenetv2.py  cfg_bisenetv1.py  cfg_bisenetv2.py
src/core/: consts.py  evaluate.py  inference.py  train.py  utils.py
src/data/: consts.py  filter_images.py
src/lib/: base_dataset.py  cityscapes_cv2.py  consts.py  logger.py  lr_scheduler.py  ohem_ce_loss.py  sampler.py  soft_dice_loss.py  tevel_cv2.py  transform_cv2.py
src/main/: consts.py  evaluate.py  inference.py  train.py  utils.py
src/model_components/: data_cv2.py  logger.py  meters.py  soft_dice_loss.py  tevel_cv2.py  transform_cv2.py
src/models/: cityscapes.py  consts.py  conver_to_trt.py  demo.py  evaluate.py  inference.py  loss.py  model.py  train.py  utils.py
src/tools/: consts.py  conver_to_trt.py  demo.py  evaluate.py  export_onnx.py  train.py  train_amp.py
src/visualization/: visualize.py
(+33 files in other folders)
