[metadata]
name = fast_segmentation
version = 0.0.3
author = Eilon Shimony
author_email = eilonshi@gmail.com
description = A package for fast segmentation algorithm based on the architecture of BiSeNet-v2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/fast_segmentation
project_urls =
    Bug Tracker = https://github.com/pypa/fast_segmentation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src